@@ -12,6 +12,7 @@ Permitir cambiar posicion de lectura actual en Visor de Cinta de Entrada para ar
 Permitir cargar rom de 8kb en ZX80 (por ejemplo la rom del ZX81, como un ZX80 actualizado a ZX81)
 Permitir aumentar sprites en View Sprites
 Mejorada compilación: opciones --enable-memptr --enable-visualmem --enable-cpustats están activadas por defecto en ./configure
+Mejorado debug cpu history: permitir cambiar el puntero de memoria según el registro PC mostrado en el historial
 
 Mejorado ZX Vision:
 - Al seleccionar estilo de ZX Vision Style, se aplica al mover el cursor
